K8Resource/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: mockopenapi
spec:
  finalizers:
    - kubernetes
status:
  phase: Active
